[package]
name = "file-rotator"
version = "0.3.0"
authors = ["Kevin Robert Stravers <macocio@gmail.com>", "Archis Gore <archis@polyverse.com"]
edition = "2018"
description = "Log rotation for files, supports synchronous std API and an asynchronous tokio-based API."
homepage = "https://github.com/polyverse/file-rotate"
repository = "https://github.com/polyverse/file-rotate"
keywords= ["log", "rotate", "logrotate"]
license = "LGPL-3.0-or-later"

[features]
async = ["futures", "futures-util", "tokio"]

[dependencies]
futures = { version = "0.3.8", optional = true }
futures-util = { version = "0.3.8", optional = true }
tokio = { version = "1.0.1", features = ["fs", "io-util"], optional = true }


[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
tokio-test = "0.4.0"
