[package]
name = "file-rotation"
version = "0.4.0"
authors = ["Kevin Robert Stravers <macocio@gmail.com>", "Archis Gore <archis@polyverse.com"]
edition = "2018"
description = "Log rotation for files, supports synchronous std API and an asynchronous tokio-based API."
homepage = "https://github.com/polyverse/file-rotate"
repository = "https://github.com/polyverse/file-rotate"
keywords= ["log", "rotate", "logrotate"]
license = "LGPL-3.0-or-later"

[features]
default = ["sync"]
async = ["futures", "futures-util", "tokio"]
sync = []

[dependencies]
futures = { version = "0.3.8", optional = true }
futures-util = { version = "0.3.8", optional = true }
tokio = { version = "1.0.1", features = ["fs", "io-util"], optional = true }

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
quickcheck_async = "0.1.1"
tokio = { version = "1.0.1", features = ["rt", "fs", "io-util", "macros"]}
